clean slate for next release
git-svn-id: http://svn.php.net/repository/pear/packages/Console_Color/trunk@220745 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -18,12 +18,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>0.0.4</version>
-    <date>2006-09-28</date>
+    <version>0.0.x</version>
+    <date>2006-xx-xx</date>
     <license>PHP</license>
     <state>beta</state>
     <notes>
-      Fix #563: Incorrect use of global variable
     </notes>
     <filelist>
       <dir name="/" baseinstalldir="Console">
