--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>Console_Color</name>
  <channel>pear.php.net</channel>
  <summary>This Class allows you to easily use ANSI console colors in your application.</summary>
@@ -18,11 +18,11 @@ control codes. print Console_Color::convert(&quot;%rHello World!%n&quot;); would
   <email>scottmattocks@php.net</email>
   <active>yes</active>
  </lead>
- <date>2010-10-25</date>
- <time>20:09:26</time>
+ <date>2011-12-18</date>
+ <time>18:36:56</time>
  <version>
-  <release>1.0.3</release>
-  <api>1.0.0</api>
+  <release>0.1.0</release>
+  <api>0.1.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -30,17 +30,15 @@ control codes. print Console_Color::convert(&quot;%rHello World!%n&quot;); would
  </stability>
  <license uri="http://www.opensource.org/licenses/mit-license.php">MIT</license>
  <notes>
-QA release
-Doc Bug #9948 	License file not included in tarball
-Request #14785 	Improve PHPCS results
-SVN dir layout
+PHP5 syntax
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="Console" md5sum="ded272b8ea930a3d361476b696b0ac4b" name="examples/color_example.php" role="doc" />
+   <file baseinstalldir="/" md5sum="68d09798545466f4cf2152e710623934" name="Console/Color2.php" role="php" />
+   <file baseinstalldir="Console" md5sum="04c232aa258bd5c8d14b2a370fcd1292" name="examples/color_example.php" role="doc" />
    <file baseinstalldir="Console" md5sum="32593f1641504e01f9fb6df55c1c5478" name="examples/documentation" role="doc" />
-   <file baseinstalldir="Console" md5sum="587fea16d168de58e6e47a7d05cfb5f0" name="Color.php" role="php" />
    <file baseinstalldir="Console" md5sum="386286831b7c47adae39ddfb51d483ab" name="LICENSE" role="doc" />
+   <file baseinstalldir="/" md5sum="ea4ee09f74764a34fc99e6da91a06c62" name="README" role="data" />
   </dir>
  </contents>
  <dependencies>
@@ -116,6 +114,21 @@ QA release
 Doc Bug #9948 	License file not included in tarball
 Request #14785 	Improve PHPCS results
 SVN dir layout
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.0</release>
+    <api>0.1.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2011-12-18</date>
+   <license uri="http://www.opensource.org/licenses/mit-license.php">MIT</license>
+   <notes>
+PHP5 syntax
    </notes>
   </release>
  </changelog>
