--- a/package.xml
+++ b/package.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
- <name>Console_Color</name>
+ <name>Console_Color2</name>
  <channel>pear.php.net</channel>
  <summary>This Class allows you to easily use ANSI console colors in your application.</summary>
  <description>You can use Console_Color::convert to transform colorcodes like %r into ANSI
-control codes. print Console_Color::convert(&quot;%rHello World!%n&quot;); would print
+control codes. $console = new Console_Color2(); print $console-&gt;convert(&quot;%rHello World!%n&quot;); would print
 &quot;Hello World&quot; in red, for example.</description>
+ <lead>
+  <name>Daniel O&apos;Connor</name>
+  <user>doconnor</user>
+  <email>daniel.oconnor@gmail.com</email>
+  <active>yes</active>
+ </lead>
  <lead>
   <name>Stefan Walk</name>
   <user>et</user>
   <email>et@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
  <lead>
   <name>Scott Mattocks</name>
   <user>scottmattocks</user>
   <email>scottmattocks@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
  <date>2011-12-18</date>
- <time>18:51:39</time>
+ <time>18:57:56</time>
  <version>
   <release>0.1.0</release>
   <api>0.1.0</api>
@@ -37,6 +43,7 @@ PHP5 syntax
    <file baseinstalldir="/" md5sum="d40e6390b9d6af9e6d1f417c579e9877" name="Console/Color2.php" role="php" />
    <file baseinstalldir="Console" md5sum="04c232aa258bd5c8d14b2a370fcd1292" name="examples/color_example.php" role="doc" />
    <file baseinstalldir="Console" md5sum="32593f1641504e01f9fb6df55c1c5478" name="examples/documentation" role="doc" />
+   <file baseinstalldir="/" md5sum="dbdc475b131287a31ce72d4484107721" name="Console_Color-0.1.0.tgz" role="data" />
    <file baseinstalldir="Console" md5sum="386286831b7c47adae39ddfb51d483ab" name="LICENSE" role="doc" />
    <file baseinstalldir="/" md5sum="ea4ee09f74764a34fc99e6da91a06c62" name="README" role="data" />
   </dir>
