--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Console_Color2": ""
+            "Console": "./"
         }
     },
     "include-path": [
